--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,9 @@
 name: Publish to Docker
 on:
+  workflow_dispatch:
+    inputs:
+      env:
+        description: "Environment"
   push:
     branches:
       - main
